Fix: break in row dividing lines

--- a/assets/styles/layout.less
+++ b/assets/styles/layout.less
@@ -107,7 +107,11 @@ article header {
   padding-right: 1em;
 }
 
-table td.number, th.number {
+.content table {
+  border-collapse: collapse;
+}
+
+.content table td.number, th.number {
   padding-left: 1em;
   padding-right: 1em;
   text-align: center;
